--- a/frida/templates/calculate_ifs.html
+++ b/frida/templates/calculate_ifs.html
@@ -353,7 +353,7 @@
 			<div class="col-xs-12">
 				<ul class="list-group">
 					<li class="list-group-item active">Target Setup</li>
-					<li class="list-group-item"> Total source brightness <span class="badge">{{ target_info.Band }} = {{ target_info.Magnitude }} {{target_info.MagSystem}} </span> </li>
+					<li class="list-group-item"> Total source brightness <span class="badge">{{ target_info.Band }} [{{target_info.MagSystem}}] = {{ target_info.Magnitude }} </span> </li>
 					<li class="list-group-item"> Flux distribution type <span class="badge"> {{ target_info.energy_type }}</span> </li>
 					<li class="list-group-item"> Geometry <span class="badge"> {{ target_info.source_type}} </span> </li>
 				</ul>
