--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -390,7 +390,7 @@
 					<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
 					<li class="list-group-item"> FWHM at difraction limit <span class="badge"> {{ fwhm_core|astro_round:0 }}</span> </li>
 					<li class="list-group-item"> 
-						Strehl Ratio (Target)  <span class="badge">{{ strehl_ratio.0|percentage|floatformat }}%</span>
+						Strehl Ratio (Target)  <span class="badge">{{ strehl_ratio.0|percentage|floatformat:1 }}%</span>
 					</li>
 				</ul>
 			</div>
@@ -446,7 +446,7 @@
 						Total exposure time <span class="badge">{{ total_exposure_time|astro_round:0 }} </span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Max. intensity at central pixel per DIT (object+sky)  <span class="badge">{{ max_signal_obj_sky_dit|astro_round:1 }}</span>
+						Max. intensity at central pixel per DIT (object+sky)  <span class="badge">{% astro_scien_to max_signal_obj_sky_dit 2 'electron' %}</span>
 					</li>
 					<li class="list-group-item"> 
 						Detector saturation limit (e<sup>-</sup>) <span class="badge">{% astro_round_to saturation_time 0 's' %} </span>
@@ -458,10 +458,10 @@
 						Number of pixels in Aperture <span class="badge">{{ AreaNpix|floatformat:0 }} pixels</span>
 					</li>
 					<li class="list-group-item"> 
-						Total number of e<sup>-</sup> in Aperture (object only)<span class="badge">{{ signal_req|astro_round:1 }}</span>
+						Total number of e<sup>-</sup> in Aperture (object only)<span class="badge">{% astro_scien_to  signal_req 2 'electron' %}</span>
 					</li>
 					<li class="list-group-item"> 
-						Total number of e<sup>-</sup> in Aperture per DIT (object only, 1 DIT) <span class="badge">{{ signal_req_per_dit|astro_round:1 }}</span>
+						Total number of e<sup>-</sup> in Aperture per DIT (object only, 1 DIT) <span class="badge">{% astro_scien_to  signal_req_per_dit 2 'electron' %} </span>
 					</li>
 					<li class="list-group-item"> 
 						Background (1 DIT per pix) <span class="badge">{{ background|astro_round:1 }}</span>
@@ -474,7 +474,7 @@
 					</li>
 					{%if not target_info.extended %}
 					<li class="list-group-item"> 
-						Encircled Energy (Target)  <span class="badge">{{ encircled_energy.0|percentage|floatformat }}%</span>
+						Encircled Energy (Target)  <span class="badge">{{ encircled_energy.0|percentage|floatformat:1 }}%</span>
 					</li>
 					{% endif %}
 					<li class="list-group-item"> 
