--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -129,7 +129,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 form-inline imaging_dependent">
+			<div class="col-xs-12 form-inline ">
 				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<strong>Output:</strong>
