--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -451,7 +451,7 @@
 						Detector saturation limit (e<sup>-</sup>) <span class="badge">{% astro_round_to saturation_time 0 's' %} </span>
 					</li>
 					<li class="list-group-item "> 
-						Aperture Radius (defining the S/N reference area) <span class="badge">{% astro_round_to Aperture_radius 0 'mas' %} mas</span>
+						Aperture Radius (defining the S/N reference area) <span class="badge">{% astro_round_to Aperture_radius 0 'mas' %} </span>
 					</li>
 					<li class="list-group-item"> 
 						Number of pixels in Aperture <span class="badge">{{ AreaNpix|floatformat:0 }} pixels</span>
