--- a/frida/templates/calculate_ifs.html
+++ b/frida/templates/calculate_ifs.html
@@ -370,7 +370,7 @@
 					<li class="list-group-item active">GTCAO NGS </li>
 					<li class="list-group-item"> Reference star magnitude (R Band)<span class="badge"> {{ guide_star.Magnitude }}</span> </li>
 					<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
-					<li class="list-group-item"> Strehl Ratio (Target)  <span class="badge">{{ strehl_ratio.0|percentage|floatformat }}%</span> </li>
+					<li class="list-group-item"> Strehl Ratio (Target)  <span class="badge">{{ strehl_ratio.0|percentage|floatformat:1 }}%</span> </li>
 				</ul>
 			</div>
 			<div class="col-xs-12">
@@ -407,7 +407,7 @@
 						Total exposure time <span class="badge">{{ total_exposure_time }}</span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Max. intensity at central pixel per DIT (object+sky)  <span class="badge">{{ max_signal_obj_sky_dit}} </span>
+						Max. intensity at central pixel per DIT (object+sky)  <span class="badge">{% astro_scien_to max_signal_obj_sky_dit 2 'electron' %}</span>
 					</li>
 					<li class="list-group-item "> 
 						Aperture Radius (defining the S/N reference area) <span class="badge">{% astro_round_to Aperture_radius 0 'mas' %}</span>
@@ -417,7 +417,7 @@
 					</li>
 					{% if not target_info.extended %}
 					<li class="list-group-item"> 
-						Encircled Energy (Target)  <span class="badge">{{ encircled_energy|percentage|floatformat }}%</span>
+						Encircled Energy (Target)  <span class="badge">{{ encircled_energy.0|percentage|floatformat:1 }}%</span>
 					</li>
 					{% endif %}
 					<li class="list-group-item"> 
@@ -434,9 +434,7 @@
 							<div class="col-xs-12"> <img class="img-fluid" width="100%" src="/media/{{img_name}}.png"></div>
 						</div>
 						<div class="row">
-							{% comment %}
 							<div class="col-xs-12 text-center"> <a class="btn btn-primary btn-sm" href="/media/{{img_name}}.fits"><i class="fa fa-download"></i> Download FITS</a></div>
-							{% endcomment %}
 						</div>
 					</div>
 				</div>
