--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -120,7 +120,7 @@
 								 <input class="form-control" type="text" name="limit" disabled value="0" id="fcore_fix">
 							</div>
 							<div class="col-xs-12 col-md-4">
-								<label>=Aperure Radius </label>
+								<label>=Aperture Radius </label>
 								 <input class="form-control" type="text" disabled value="0" id="fcore_fix" name="aperture">
 							</div>
 						</div>
@@ -136,7 +136,7 @@
 					</div>
 					<div class="panel-body">
 						<div class="row " id="naco">
-							<div class="col-xs-3 text-center"> <input type="checkbox" name="addnoise" checked/> Add noise to PSF</div>
+							<div class="col-xs-3 text-center"> <input type="checkbox" name="addnoise_psf" checked/> Add noise to PSF</div>
 							<div class="col-xs-3 text-center"> <input type="checkbox" name="2d_psf" checked/> 2-D PSF image (png and FITS) (point source only)</div>
 							<div class="col-xs-3 text-center"> <input type="checkbox" name="enc_energy_aperture_radius" /> Encircled Energy as a function of Aperture Radius (point source only)</div>
 							<div class="col-xs-3 text-center"> <input type="checkbox" name="sn_as_exp_time" checked/> S/N as a function of Exposure Time </div>
